MediaCloud/wwwroot/css/site.css
html {
  font-size: 14px;
  position: relative;
  min-height: 100%;
}

@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

@media (min-width: 368px) {
    col-xsm {
        flex: 1 0 0%;
    }
}

body {
}

.main-background {
    overflow: hidden;
    display: flex;
    justify-content: center;
    position: absolute;
    width: 100%;
    left: 0;
}

.main-background img {
    padding-top: 4rem; 
    min-width: 60rem
}

.main-frame {
    display: flex;
    justify-content: center;
    background: #5063b9;
    min-height: 95vh;
}

.main-container {
    width: 100%;
    max-width: 2200px;
}

.navbar {
    /* fallback for old browsers */
    background: #ddb56e;
    /* Chrome 10-25, Safari 5.1-6 */
    background: -webkit-linear-gradient(to bottom, rgba(77, 37, 116, 1), rgba(130, 84, 248, 1));
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    background: linear-gradient(to bottom, rgba(77, 37, 116, 1), rgba(130, 84, 248, 1))
}

.footer {
    /* fallback for old browsers */
    background: #ddb56e;
    /* Chrome 10-25, Safari 5.1-6 */
    background: -webkit-linear-gradient(to bottom, rgba(130, 84, 248, 1), rgba(77, 37, 116, 1));
    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    background: linear-gradient(to bottom, rgba(130, 84, 248, 1), rgba(77, 37, 116, 1));
    position: absolute;
    bottom: 0;
    width: 100%;
}

.page-container {
    border-radius: .3rem !important;
    padding: 1rem !important;
    --bs-text-opacity: 1;
    color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
    margin-bottom: 1rem;
    overflow-x: auto;
    overflow-y: hidden;
    min-height: 95vh;
}

.page-center-container {
    display: flex;
    justify-content: center;
}

.page-header-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.progress {
    color: black;
    background-color: rgb(38, 84, 112);
    min-width: 20rem;
    width: 25%;
    height: 1.5rem;
    border-radius: 2rem;
}

.progress-bar-value {
    height: 100%;
    vertical-align: middle;
    line-height: 1.5rem;
    font-size: small;
    color: white;
}

.button-panel {
    display: flex !important;
    flex-direction: row !important;
    align-items: center !important;
    flex-wrap: wrap;
    justify-content: space-between;
}

.button-group {
    display: flex;
    margin-top: 1rem;
}

.button-panel .btn {
    margin-right: 0.25rem;
    margin-left: 0.25rem;
    padding-right: 0.6rem;
    padding-left: 0.6rem;
}

.button-group-input {
    margin-right: 0.25rem;
    margin-left: 0.25rem;
}

.button-group .separator {
    display: inline-block;
    align-self: stretch;
    width: 1px;
    min-height: 1em;
    background-color: currentColor;
    opacity: .25;
    margin-right: 0.5rem;
    margin-left: 0.5rem;
}

.button-group .descriptor {
    margin-right: 0.5rem;
    margin-left: 0.5rem;
    white-space: nowrap;
    align-self: center;
}

.picture-controls-container {
    position: absolute;
    right: 0;
    bottom: 0;
    background: white;
    border-radius: 1rem;
    max-height: 5rem;
    padding: .5rem;
    display: flex;
    align-items: center;
}

.rotate-button {
    width: 2rem;
    height: 2rem;
    display: flex;
    justify-content: center;
    margin-left: .5rem;
}

.arrow-button-right {
    cursor: pointer; 
    position: absolute; 
    right: 0; 
    width: 2rem; 
    background: deepskyblue; 
    padding: 0.5rem; 
    border-radius: 1rem;
}

.arrow-button-left {
    cursor: pointer; 
    position: absolute; 
    left: 0; 
    width: 2rem; 
    background: deepskyblue; 
    padding: 0.5rem; 
    border-radius: 1rem;
}

.control-button-panel {
    display: flex !important;
    justify-content: space-between !important;
    margin-bottom: 1rem !important;
}

.image-column {
    min-width: 10rem;
}

.image-row {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    object-fit: fill;
    width: 100%;
    margin: 0;
}

.gallery {
   display: flex;
   margin-top: 1rem!important;
}

@keyframes smooth-appear {
    from {
		opacity: 0;
        transform: translateY(5rem);
	}
    to {
        opacity: 1;
        transform: translateY(0rem);
    }
}
.gallery-item {
    display: flex;
    justify-content: end;
    align-items: end;
    opacity: 0;
    transform: translateY(5rem);
    animation: smooth-appear 0.7s ease forwards;
    animation-iteration-count: 1;
}

.gallery-item-container {
    transition: all 0.3s ease-in-out;
}

.gallery-item-container:hover {
    transition: all 0.3s ease-in-out;
    transform: scale(1.05);
    cursor: pointer;
}

.gallery-image {
    transition: border-radius 0.6s; /* Animation */
    border-radius: 0.75rem;
    background: white;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

.gallery-image:hover {
    transition: border-radius 0.6s; /* Animation */
    border-radius: 2rem;
    background: white;
}

.gallery-item-bubble {
    position: absolute;
    min-width: 2.25rem;
    text-align: center;
    color: white;
    margin-bottom: 1.85rem;
    margin-right: 0.25rem;
    font-size: 1.5rem;
}

.filename-container {
    position: fixed;
    left: 1rem;
    bottom: 1.75rem;
    background: rgb(115, 113, 185);
    border-radius: 1.5rem;
    padding: 0.5rem;
    text-wrap: nowrap;
    max-width: 93%;
    border: #5063b9;
    border-style: solid;
    border-width: 0.03rem;
    border-color: rgb(19, 19, 86);
}

.filename {
    font-size: large;
    color: white;
    overflow: hidden;
    text-overflow: ellipsis;
}

.list-clickable {
    border-style: hidden;
    transition: Background-color 0.6s
}

.list-clickable:hover {
    background-color: rgb(147, 144, 222);
    transition: Background-color 0.6s;
    cursor: pointer;
}

.whiteback-bar {
    background: white;
    border-radius: 1.5rem;
    padding: 1.5rem;
    margin: 1rem;
}

.table-item-padding {
    padding: 0.75rem!important;
}

.card {
    align-self: center;
    max-width: 700px;
}

.card-container {
    display: flex;
    justify-content: center;
}

.picture-card {
    margin-bottom: 1.5rem;
    opacity: 0;
    transform: translateY(5rem);
    animation: smooth-appear 0.7s ease forwards;
    animation-iteration-count: 1;
}

.picture-card:hover {
    transition: all 0.3s ease-in-out;
    transform: scale(1.05);
    cursor: pointer;
}

.picture-container {
    position:relative;
    display: inline-block;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

.picture-viewport {
    max-height: 85vh;
    display: flex;
    justify-content: center;
}

@keyframes smooth-appear-zoom {
    from {
		opacity: 0;
        transform: scale(0.7);
	}
    to {
        opacity: 1;
        transform: scale(1);
    }
}

.picture-viewer {
    object-fit: contain; 
    height: 80vh;
    max-width: 90vw;
    animation-iteration-count: 1;
}

#btn-back-to-top {
    position: fixed;
    bottom: 20px;
    right: 20px;
    display: none;
}

.btn-inactive {
    border-color: darkgray;
}

.autocomplete {
    position: relative;
    display: inline-block;
}

.autocomplete-items {
    position: absolute;
    z-index: 99;
    top: 100%;
    left: 0;
    right: 0;
}

.load-spinner {
    display: block; 
    width:3rem; 
    height:3rem;
}

.page-autoload-notifier {
    text-align: center; 
    display: none;
    margin-top: 4rem;
    margin-bottom: 4rem;
}

.big-form-check-input {
    min-width: 2rem !important; 
    min-height: 2rem !important;
}

.chart-canvas {
    min-height: 20rem;
    max-height: 60rem;
}

.chart-canvas-block {
    min-height: 20rem;
    min-width: 20rem;
    max-width: 75rem;
    max-height: 75rem;
}

.task-message {
    width: 100%;
    min-height: 10rem!important;
}

